--- a/RenoMeraApi/Properties/launchSettings.json
+++ b/RenoMeraApi/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:33151",
+      "applicationUrl": "https://localhost:44349",
       "sslPort": 44349
     }
   },
